# otus-cpp-basic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
02_build_hello/: CMakeLists.txt
02_build_hello/hello/: CMakeLists.txt
02_build_hello/hello2/: CMakeLists.txt
08_classes/: CMakeLists.txt  buffer_dtor.cpp  buffer_ruleof5.cpp  buffer_wo_dtor.cpp  complex.hpp  complex_class.cpp  complex_ex.cpp  complex_polar.cpp  complex_polar_friends.cpp  complex_struct.cpp  complex_struct_methods.cpp  person.cpp
23_multithreading/: CMakeLists.txt  savefile_bg.cpp  savefile_bg_cref.cpp  switch.cpp  thread_guard.cpp
